# sherpa

./: README.md  app_csv_optimized.py  pyproject.toml  replit.nix  subnets.csv
attached_assets/: Pasted--gcp-service-account-type-service-account-project-id-sherpa-457607-private-key-id-6a2bb9-1745306788810.txt  Pasted-CLASIFICACI-N-EN-EJES-PRINCIPALES-EJE-SERVICE-RESEARCH-Preguntas-para-determinar-orientaci-n-1746458495851.txt  Pasted-CLASIFICACI-N-EN-EJES-PRINCIPALES-EJE-SERVICE-RESEARCH-Preguntas-para-determinar-orientaci-n-a-S-1746457923384.txt  datos.csv  instrucciones.txt  subnet-plot.py
backup_deprecated/: app.py  app_csv.py  app_sheets.py  models.py  sheets_client.py  subnets.db  subnets.json  temp_credentials.json
instance/: subnets.csv  subnets.db
